--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-tensorflow
-keras
-streamlit
-pillow
-matplotlib
-numpy
+streamlit==1.36.0
+tensorflow==2.15.0
+keras==2.15.0
+pillow==10.2.0
+numpy==1.26.4
